[project]
name = "sany-excavator-count"
version = "0.1.0"
description = ""
authors = [
    {name = "TimmyGiorno",email = "zhaobinchu2022@163.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "roboflow (>=1.3.1,<2.0.0)",
    "ultralytics (>=8.4.37,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
